--- a/Desktop/Pages/RestaurantsPage.xaml
+++ b/Desktop/Pages/RestaurantsPage.xaml
@@ -84,12 +84,23 @@
             </ScrollViewer>
         </Border>
 
-        <!-- Empty Grid for Item Output -->
+        <!-- User Controls Container -->
         <Border Grid.Row="2" Background="{StaticResource CardBrush}" 
-                CornerRadius="8" Margin="0,200,0,0" Padding="15">
-            <Grid x:Name="ItemOutputGrid">
-                <!-- Пустой Grid для вывода item из БД -->
-            </Grid>
+                CornerRadius="12" Margin="0,20,0,0" Padding="20">
+            <Border.Effect>
+                <StaticResource ResourceKey="ShadowEffect"/>
+            </Border.Effect>
+
+            <ScrollViewer VerticalScrollBarVisibility="Auto" MaxHeight="300">
+                <ItemsControl x:Name="RestaurantsItemsControl">
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <items:RestaurantCard 
+                                MouseLeftButtonDown="RestaurantCard_MouseLeftButtonDown"/>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
+            </ScrollViewer>
         </Border>
     </Grid>
 </Page>
